# Reflections

./: com.jarusll.reflections.json  meson.build
data/: com.jarusll.reflections.appdata.xml.in  com.jarusll.reflections.desktop.in  com.jarusll.reflections.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  igdb.vala  main.vala  meson.build  reflections.gresource.xml  requests.vala  window.ui  window.vala
